Update the webpage
JerryScript-DCO-1.0-Signed-off-by: László Langó llango.u-szeged@partner.samsung.com

--- a/01.GETTING-STARTED.md
+++ b/01.GETTING-STARTED.md
@@ -49,6 +49,12 @@ python tools/build.py --debug
 python tools/build.py --debug --lto=off
 ```
 
+**To enable more verbose outputs for debugging**
+
+```bash
+tools/build.py --debug --logging=on --error-messages=on --line-info=on
+```
+
 **Add custom arguments to CMake**
 
 ```bash
