--- a/02.API-REFERENCE.md
+++ b/02.API-REFERENCE.md
@@ -73,6 +73,7 @@ Possible compile time enabled feature types:
  - JERRY_FEATURE_LINE_INFO - line info available
  - JERRY_FEATURE_LOGGING - logging
  - JERRY_FEATURE_SYMBOL - symbol support
+ - JERRY_FEATURE_DATAVIEW - DataView support
 
 ## jerry_regexp_flags_t
 
@@ -197,6 +198,9 @@ JerryScript value can be a boolean, number, null, object, string or undefined. T
 that indicates whether is an error or not. Every type has an error flag not only objects. The error flag should
 be cleared before the value is passed as an argument, otherwise it can lead to a type error. The error objects
 created by API functions has the error flag set.
+
+Returned and created values by the API functions must be freed with
+[jerry_release_value](#jerry_release_value) when they are no longer needed.
 
 **Prototype**
 
@@ -664,6 +668,8 @@ someplace_in_the_code (void)
 Registers an external magic string array.
 
 *Note*: The strings in the array must be sorted by size at first, then lexicographically.
+*Note*: The maximum number of external magic strings is limited to 2147483648 (UINT32_MAX / 2).
+        If there are more than 2147483648 external magic strings the extra is cropped.
 
 **Prototype**
 
@@ -937,7 +943,10 @@ jerry_parse_function (const jerry_char_t *resource_name_p, /**< resource name (u
 
 Run an EcmaScript function created by `jerry_parse`.
 
-*Note*: The code should be previously parsed with `jerry_parse`.
+*Note*:
+  - The code should be previously parsed with `jerry_parse`.
+  - Returned value must be freed with [jerry_release_value](#jerry_release_value)
+    when it is no longer needed.
 
 **Prototype**
 
@@ -995,7 +1004,10 @@ main (void)
 
 **Summary**
 
-Perform JavaScript `eval`.
+Perform JavaScript `eval` function call (ECMA-262 v5.1 sec-15.1.2.1).
+
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 
@@ -1031,6 +1043,9 @@ jerry_eval (const jerry_char_t *source_p,
 **Summary**
 
 Run enqueued Promise jobs until the first thrown error or until all get executed.
+
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 
@@ -1193,6 +1208,8 @@ jerry_value_is_array (const jerry_value_t value)
 
 Returns whether the given `jerry_value_t` is an ArrayBuffer object.
 
+*Note*: This API depends on the ES2015-subset profile.
+
 **Prototype**
 
 ```c
@@ -1304,6 +1321,58 @@ jerry_value_is_constructor (const jerry_value_t value)
 
 - [jerry_release_value](#jerry_release_value)
 
+## jerry_value_is_dataview
+
+**Summary**
+
+Returns whether the given `jerry_value_t` is a DataView object value.
+
+*Note*: This API depends on the ES2015-subset profile.
+
+**Prototype**
+
+```c
+bool
+jerry_value_is_dataview (const jerry_value_t value)
+```
+
+- `value` - API value
+- return value
+  - true, if the given `jerry_value_t` is a DataView object
+  - false, otherwise
+
+**Example**
+
+[doctest]: # ()
+
+```c
+#include "jerryscript.h"
+
+int
+main (void)
+{
+  jerry_init (JERRY_INIT_EMPTY);
+
+  jerry_value_t arraybuffer = jerry_create_arraybuffer (16);
+  jerry_value_t dataview = jerry_create_dataview (arraybuffer, 0, 16);
+
+  if (jerry_value_is_dataview (dataview))
+  {
+    // usage of dataview
+  }
+
+  jerry_release_value (dataview);
+  jerry_release_value (arraybuffer);
+
+  jerry_cleanup ();
+}
+```
+
+**See also**
+
+- [jerry_release_value](#jerry_release_value)
+
+
 ## jerry_value_is_error
 
 **Summary**
@@ -1392,7 +1461,7 @@ Returns whether the given `jerry_value_t` is a number.
 
 ```c
 bool
-jerry_value_is_function (const jerry_value_t value)
+jerry_value_is_number (const jerry_value_t value)
 ```
 
 - `value` - api value
@@ -1584,6 +1653,8 @@ jerry_value_is_string (const jerry_value_t value)
 **Summary**
 
 Returns whether the given `jerry_value_t` is a symbol value.
+
+*Note*: This API depends on the ES2015-subset profile.
 
 **Prototype**
 
@@ -1789,6 +1860,9 @@ jerry_is_feature_enabled (const jerry_feature_t feature);
 **Summary**
 
 Perform binary operation on the given operands (==, ===, <, >, etc.).
+
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 
@@ -2829,13 +2903,16 @@ jerry_value_to_string (const jerry_value_t value);
 
 # Functions for promise objects
 
-These APIs all depends on the ES2015-subset profile.
+These APIs all depend on the ES2015-subset profile.
 
 ## jerry_resolve_or_reject_promise
 
 **Summary**
 
 Resolve or reject the promise with an argument.
+
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 
@@ -3023,6 +3100,9 @@ is no longer needed.
 
 Create an array object value.
 
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
+
 **Prototype**
 
 ```c
@@ -3056,6 +3136,11 @@ jerry_create_array (uint32_t size);
 **Summary**
 
 Create a jerry_value_t representing an ArrayBuffer object.
+
+*Note*:
+  - This API depends on the ES2015-subset profile.
+  - Returned value must be freed with [jerry_release_value](#jerry_release_value)
+    when it is no longer needed.
 
 **Prototype**
 
@@ -3097,6 +3182,11 @@ user specified back-buffer.
 User must pass a buffer pointer which is at least `size` big.
 After the object is not needed the GC will call the `free_cb`
 so the user can release the buffer which was provided.
+
+*Note*:
+  - This API depends on the ES2015-subset profile.
+  - Returned value must be freed with [jerry_release_value](#jerry_release_value)
+    when it is no longer needed.
 
 **Prototype**
 
@@ -3176,10 +3266,11 @@ jerry_create_boolean (bool value);
 
 Create new JavaScript error object.
 
-Important! The `error_type` argument *must not be*
-`JERRY_ERROR_NONE`.
+Important! The `error_type` argument *must not be* `JERRY_ERROR_NONE`.
 Creating an error with no error type is not valid.
 
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 
@@ -3220,6 +3311,9 @@ jerry_create_error (jerry_error_t error_type,
 
 Create new JavaScript error object.
 
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
+
 **Prototype**
 
 ```c
@@ -3254,11 +3348,71 @@ jerry_create_error_sz (jerry_error_t error_type,
 - [jerry_create_error](#jerry_create_error)
 
 
+## jerry_create_dataview
+
+**Summary**
+
+Create new JavaScript DataView object.
+
+*Note*:
+  - This API depends on the ES2015-subset profile.
+  - Returned value must be freed with [jerry_release_value](#jerry_release_value)
+    when it is no longer needed.
+
+**Prototype**
+
+```c
+jerry_value_t
+jerry_create_dataview (const jerry_value_t array_buffer,
+                       const jerry_length_t byte_offset,
+                       const jerry_length_t byte_length)
+```
+
+- `array_buffer` - arrayBuffer to create DataView from
+- `byte_offset` - offset in bytes, to the first byte in the buffer
+- `byte_length` - number of elements in the byte array
+- return value
+  - value of the constructed DataView object - if success
+  - created error - otherwise
+
+**Example**
+
+[doctest]: # ()
+
+```c
+#include "jerryscript.h"
+
+int
+main (void)
+{
+  jerry_init (JERRY_INIT_EMPTY);
+
+  jerry_value_t arraybuffer = jerry_create_arraybuffer (16);
+  jerry_value_t dataview = jerry_create_dataview (arraybuffer, 0, 16);
+
+  // usage of dataview
+
+  jerry_release_value (dataview);
+  jerry_release_value (arraybuffer);
+
+  jerry_cleanup ();
+}
+```
+
+**See also**
+
+- [jerry_value_is_dataview](#jerry_value_is_dataview)
+- [jerry_create_arraybuffer](#jerry_create_arraybuffer)
+
+
 ## jerry_create_external_function
 
 **Summary**
 
 Create an external function object.
+
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 
@@ -3312,6 +3466,9 @@ handler (const jerry_value_t function_obj,
 
 Creates a `jerry_value_t` representing a number value.
 
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
+
 **Prototype**
 
 ```c
@@ -3347,6 +3504,9 @@ jerry_create_number (double value);
 
 Creates a `jerry_value_t` representing a positive or negative infinity value.
 
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
+
 **Prototype**
 
 ```c
@@ -3381,6 +3541,9 @@ jerry_create_number_infinity (bool sign);
 **Summary**
 
 Creates a `jerry_value_t` representing a not-a-number value.
+
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 
@@ -3448,6 +3611,9 @@ jerry_create_null (void);
 
 Create new JavaScript object, like with new Object().
 
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
+
 **Prototype**
 
 ```c
@@ -3481,7 +3647,10 @@ jerry_create_object (void);
 Create an empty promise object which can be resolved or rejected later
 by calling jerry_resolve_or_reject_promise.
 
-*Note*: This API depends on the ES2015-subset profile.
+*Note*:
+  - This API depends on the ES2015-subset profile.
+  - Returned value must be freed with [jerry_release_value](#jerry_release_value)
+    when it is no longer needed.
 
 **Prototype**
 
@@ -3515,6 +3684,9 @@ jerry_create_promise (void)
 **Summary**
 
 Create string from a valid CESU8 string.
+
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 
@@ -3550,6 +3722,9 @@ jerry_create_string (const jerry_char_t *str_p);
 **Summary**
 
 Create string from a valid CESU8 string.
+
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 
@@ -3591,6 +3766,8 @@ jerry_create_string_sz (const jerry_char_t *str_p,
 Create string from a valid UTF8 string.
 
 *Note*: The difference from [jerry_create_string](#jerry_create_string) is that it accepts utf-8 string instead of cesu-8 string.
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 
@@ -3628,6 +3805,8 @@ jerry_create_string_from_utf8 (const jerry_char_t *str_p);
 Create string from a valid UTF8 string.
 
 *Note*: The difference from [jerry_create_string_sz](#jerry_create_string_sz) is that it accepts utf-8 string instead of cesu-8 string.
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 
@@ -3668,7 +3847,11 @@ jerry_create_string_sz (const jerry_char_t *str_p,
 
 Create symbol from an API value.
 
-*Note*: The given argument is converted to string. This operation can throw an error.
+*Note*:
+  - The given argument is converted to string. This operation can throw an error.
+  - This API depends on the ES2015-subset profile.
+  - Returned value must be freed with [jerry_release_value](#jerry_release_value)
+    when it is no longer needed.
 
 **Prototype**
 
@@ -3718,9 +3901,12 @@ main (void)
 
 **Summary**
 
-Returns a jerry_value_t RegExp object or an error, if the construction of the object fails.
+Returns a `jerry_value_t` RegExp object or an error, if the construction of the object fails.
 Optional flags can be set using [jerry_regexp_flags_t](#jerry_regexp_flags_t).
 These flags can be combined together with the binary OR operator or used on their own as enum values.
+
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 ```c
@@ -3752,9 +3938,12 @@ jerry_create_regexp (const jerry_char_t *pattern_p, uint16_t flags);
 
 **Summary**
 
-Returns a jerry_value_t RegExp object or an error, if the construction of the object fails.
+Returns a `jerry_value_t` RegExp object or an error, if the construction of the object fails.
 Optional flags can be set using [jerry_regexp_flags_t](#jerry_regexp_flags_t).
 These flags can be combined together with the binary OR operator or used on their own as enum values.
+
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 ```c
@@ -3792,6 +3981,11 @@ Create a jerry_value_t representing an TypedArray object.
 
 For the new object the type of the TypedArray (see: [jerry_typedarray_type_t](#jerry_typedarray_type_t))
 and element count can be specified.
+
+*Note*:
+  - This API depends on the ES2015-subset profile.
+  - Returned value must be freed with [jerry_release_value](#jerry_release_value)
+    when it is no longer needed.
 
 **Prototype**
 
@@ -3838,6 +4032,11 @@ type of TypedArray otherwise an error is generated.
 
 The JavaScript equivalent of this function is: `new %TypedArray%(arraybuffer)` where `%TypedArray%` is
 one of the allowed TypedArray functions.
+
+*Note*:
+  - This API depends on the ES2015-subset profile.
+  - Returned value must be freed with [jerry_release_value](#jerry_release_value)
+    when it is no longer needed.
 
 **Prototype**
 
@@ -3889,6 +4088,11 @@ type of TypedArray otherwise an error is generated.
 
 The JavaScript equivalent of this function is: `new %TypedArray%(arraybuffer, byteOffset, length)` where `%TypedArray%` is
 one of the allowed TypedArray functions.
+
+*Note*:
+  - This API depends on the ES2015-subset profile.
+  - Returned value must be freed with [jerry_release_value](#jerry_release_value)
+    when it is no longer needed.
 
 **Prototype**
 
@@ -4646,6 +4850,9 @@ jerry_construct_object (const jerry_value_t func_obj_val,
 
 Get keys of the specified object value.
 
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
+
 **Prototype**
 
 ```c
@@ -4685,6 +4892,9 @@ jerry_get_object_keys (const jerry_value_t obj_val);
 
 Get the prototype of the specified object.
 
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
+
 **Prototype**
 
 ```c
@@ -4723,6 +4933,9 @@ jerry_get_prototype (const jerry_value_t obj_val);
 **Summary**
 
 Set the prototype of the specified object.
+
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
 
 **Prototype**
 
@@ -4764,23 +4977,11 @@ jerry_set_prototype (const jerry_value_t obj_val,
 
 **Summary**
 
-Get native pointer and its type information.
+Get native pointer by the given type information.
 The pointer and the type information are previously associated with the object by jerry_set_object_native_pointer.
 
-*Note*: It is recommended to ensure that the `out_native_info_p` value pointer
-        is equal to the native info pointer that is expected, before casting
-        and accessing the `out_native_pointer_p`.
-        An example of when this is important: external functions that expect
-        `this` to have a native pointer of a certain C type.
-        It is possible in JavaScript to change `this` at will – using `call()`,
-        `apply()` or `bind()`. Therefore, it is possible that the native pointer
-        of `this` is not of the expected C type. To handle this safely and
-        securely, one must always add type checks to make sure that the
-        `out_native_pointer_p` is of the expected type, before casting
-        and dereferencing `out_native_pointer_p`.
-
-*Note*: `out_native_pointer_p` and `out_native_info_p` can be NULL, and it means the
-        caller doesn't want to get the native_pointer or type information.
+*Note*: `out_native_pointer_p` can be NULL, and it means the
+        caller doesn't want to get the native_pointer.
 
 **Prototype**
 
@@ -4788,73 +4989,185 @@ The pointer and the type information are previously associated with the object b
 bool
 jerry_get_object_native_pointer (const jerry_value_t obj_val,
                                  void **out_native_pointer_p,
-                                 const jerry_object_native_info_t **out_native_info_p)
+                                 const jerry_object_native_info_t *native_info_p)
 ```
 
 - `obj_val` - object value to get native pointer from.
 - `out_native_pointer_p` - native pointer (output parameter).
-- `out_native_info_p` - native pointer's type information (output parameter).
+- `native_info_p` - native pointer's type information.
 - return value
-  - true, if there is native pointer associated with the object
+  - true, if there is native pointer associated of the specified object with the given native type info
   - false, otherwise
 
 **Example**
 
-```c
-typedef struct {
-  int foo;
-  bool bar;
-} native_obj_t;
+[doctest]: # ()
 
-static void native_freecb (void *native_p)
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include "jerryscript.h"
+
+typedef struct
 {
-  ... // free the native pointer
+  char *data_p;
+  unsigned int length;
+} buffer_native_object_t;
+
+typedef struct
+{
+  int area;
+  int perimeter;
+} shape_native_object_t;
+
+#define SECRET_INFO ((void *) 42)
+
+static void
+buffer_native_freecb (void *native_p)
+{
+  char *data_p = ((buffer_native_object_t*)native_p)->data_p;
+
+  if (data_p != NULL)
+  {
+    free (data_p);
+  }
+
+  free (native_p);
+}
+
+static void
+shape_native_freecb (void *native_p)
+{
+  free (native_p);
+}
+
+static void
+destructor_freecb (void *native_p)
+{
+   printf("Note: the object has been freed\n");
 }
 
 // NOTE: The address (!) of type_info acts as a way to uniquely "identify" the
-// C type `native_obj_t *`.
-static const jerry_object_native_info_t native_obj_type_info =
+// C type `buffer_native_object_t *`.
+static const jerry_object_native_info_t buffer_obj_type_info =
 {
-  .free_cb = native_freecb
+  .free_cb = buffer_native_freecb
 };
 
-// Function creating JS object that is "backed" by a native_obj_t *:
+// NOTE: The address (!) of type_info acts as a way to uniquely "identify" the
+// C type `shape_native_object_t *`.
+static const jerry_object_native_info_t shape_obj_type_info =
 {
-  ...
+  .free_cb = shape_native_freecb
+};
 
-  // construct object and native_set value:
-  jerry_value_t object = ...;
-  native_obj_t *native_obj = malloc(sizeof(*native_obj));
-  jerry_set_object_native_pointer (object, native_obj, &native_obj_type_info);
+// NOTE: The address (!) of type_info is the unique "identifier"
+static const jerry_object_native_info_t destructor_obj_type_info =
+{
+  .free_cb = destructor_freecb
+};
 
-  ...
+static void
+print_buffer (char *data_p,
+              unsigned int length)
+{
+  for (unsigned int i = 0; i < length; ++i)
+  {
+    printf("%c", data_p[i]);
+  }
+
+  printf("\n");
 }
 
-// Native method, `this` is expected to be "backed" by a native_obj_t *:
+static void
+do_stuff (jerry_value_t object)
 {
   void *native_p;
-  const jerry_object_native_info_t *type_p;
-  bool has_p = jerry_get_object_native_pointer (this_val, &native_p, &type_p);
+  bool has_p = jerry_get_object_native_pointer (object, &native_p, &buffer_obj_type_info);
 
-  if (has_p)
+  if (!has_p)
   {
-    // The type_p pointer address itself is used to identify the type:
-    if (type_p == &native_obj_type_info)
+    // Process the error
+    return;
+  }
+
+  // It is safe to cast to buffer_native_object_t * and dereference the pointer:
+  buffer_native_object_t *buffer_p = (buffer_native_object_t *) native_p;
+  print_buffer (buffer_p->data_p, buffer_p->length); // Usage of buffer_p
+
+  bool need_shape_info = true; // implementation dependent
+
+  if (need_shape_info)
+  {
+    has_p = jerry_get_object_native_pointer (object, &native_p, &shape_obj_type_info);
+
+    if (!has_p)
     {
-      // The type of this's native pointer matches what is expected.
-      // Only now is it safe to cast to native_obj_t * and dereference the
-      // pointer:
-      native_obj_t *native_obj = native_p;
-      native_obj->bar = ...; // Safe to access now!
+      // Process the error
+      return;
     }
-    else
+
+    // It is safe to cast to shape_native_object_t * and dereference the pointer:
+    shape_native_object_t *shape_p = (shape_native_object_t *) native_p;
+
+    printf("Area: %d\tPerimeter: %d\n", shape_p->area, shape_p->perimeter); // Usage of shape_p
+  }
+
+  bool need_secret_info = true; // implementation dependent
+
+  if (need_secret_info)
+  {
+    has_p = jerry_get_object_native_pointer (object, &native_p, NULL);
+
+    if (!has_p)
     {
-      // The type of this's native pointer is NOT what we expected!
-      // We should not cast to native_obj_t * and dereference because it's unsafe.
-      // Handle the error here, for example throw an error.
+      // Process the error
+      return;
+    }
+
+    printf("Secret: %d\n", (int)((uintptr_t) native_p)); // Usage of native_p
+
+    bool deleted = jerry_delete_object_native_pointer (object, NULL);
+
+    if (deleted)
+    {
+      printf("The secret is no longer available\n");
     }
   }
-  ...
+}
+
+int
+main (void)
+{
+  jerry_init (JERRY_INIT_EMPTY);
+
+  jerry_value_t object = jerry_create_object ();
+  buffer_native_object_t *buffer_p = (buffer_native_object_t *) malloc (sizeof (buffer_native_object_t));
+  buffer_p->length = 14;
+  buffer_p->data_p = (char *) malloc (buffer_p->length * sizeof (char));
+  memcpy (buffer_p->data_p, "My buffer data", buffer_p->length);
+  jerry_set_object_native_pointer (object, buffer_p, &buffer_obj_type_info);
+
+  shape_native_object_t *shape_p = (shape_native_object_t *) malloc (sizeof (shape_native_object_t));
+  shape_p->area = 6;
+  shape_p->perimeter = 12;
+  jerry_set_object_native_pointer (object, shape_p, &shape_obj_type_info);
+
+  // The native pointer can be NULL. This gives possibily to get notified via the native type info's
+  // free callback when the object has been freed by the GC.
+  jerry_set_object_native_pointer (object, NULL, &destructor_obj_type_info);
+
+  // The native type info can be NULL as well. In this case the registered property is simply freed
+  // when the object is freed by te GC.
+  jerry_set_object_native_pointer (object, SECRET_INFO, NULL);
+
+  do_stuff (object);
+
+  jerry_release_value (object);
+  jerry_cleanup ();
+
+  return 0;
 }
 ```
 
@@ -4882,7 +5195,7 @@ You can get them by calling jerry_get_object_native_pointer later.
 **Prototype**
 
 ```c
-bool
+void
 jerry_set_object_native_pointer (const jerry_value_t obj_val,
                                  void *native_p,
                                  const jerry_object_native_info_t *info_p)
@@ -4903,6 +5216,40 @@ best-practice example.
 
 - [jerry_create_object](#jerry_create_object)
 - [jerry_get_object_native_pointer](#jerry_get_object_native_pointer)
+- [jerry_object_native_info_t](#jerry_object_native_info_t)
+
+## jerry_delete_object_native_pointer
+
+**Summary**
+
+Delete the native pointer of the specified object associated with the given native type info.
+You can get them by calling jerry_get_object_native_pointer later.
+
+*Note*:
+ - If the specified object has no matching native pointer for the given native type info the operation has no effect.
+ - This operation cannot throw an exception.
+
+**Prototype**
+
+```c
+bool
+jerry_delete_object_native_pointer (const jerry_value_t obj_val,
+                                    const jerry_object_native_info_t *info_p)
+```
+
+- `obj_val` - object to delete native pointer from.
+- `info_p` - native pointer's type information.
+
+**Example**
+
+See [jerry_get_object_native_pointer](#jerry_get_object_native_pointer) for a
+best-practice example.
+
+**See also**
+
+- [jerry_create_object](#jerry_create_object)
+- [jerry_get_object_native_pointer](#jerry_get_object_native_pointer)
+- [jerry_get_object_native_pointer](#jerry_set_object_native_pointer)
 - [jerry_object_native_info_t](#jerry_object_native_info_t)
 
 
@@ -4933,9 +5280,10 @@ jerry_foreach_object_property (jerry_value_t obj_val,
 **Example**
 
 ```c
-bool foreach_function (const jerry_value_t prop_name,
-                       const jerry_value_t prop_value,
-                       void *user_data_p)
+bool
+foreach_function (const jerry_value_t prop_name,
+                  const jerry_value_t prop_value,
+                  void *user_data_p)
 {
 
   ... // implementation of the foreach function
@@ -4968,8 +5316,9 @@ Iterate over objects.
 **Prototype**
 
 ```c
-bool jerry_objects_foreach (jerry_objects_foreach_t foreach_p,
-                            void *user_data_p);
+bool
+jerry_objects_foreach (jerry_objects_foreach_t foreach_p,
+                       void *user_data_p);
 ```
 
 - `foreach_p` - function that will be invoked for each object.
@@ -5043,9 +5392,10 @@ Iterate over objects matching a certain native data type.
 **Prototype**
 
 ```c
-bool jerry_objects_foreach_by_native_info (const jerry_object_native_info_t *native_info_p,
-                                           jerry_objects_foreach_by_native_info_t foreach_p,
-                                           void *user_data_p);
+bool
+jerry_objects_foreach_by_native_info (const jerry_object_native_info_t *native_info_p,
+                                      jerry_objects_foreach_by_native_info_t foreach_p,
+                                      void *user_data_p);
 ```
 
 - `native_info_p` - native pointer's type information.
@@ -5397,6 +5747,9 @@ main (void)
 
 Generate snapshot from the specified source code.
 
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
+
 **Prototype**
 
 ```c
@@ -5415,12 +5768,12 @@ jerry_generate_snapshot (const jerry_char_t *resource_name_p,
 - `source_p` - script source, it must be a valid utf8 string.
 - `source_size` - script source size, in bytes.
 - `generate_snapshot_opts` - any combination of [jerry_generate_snapshot_opts_t](#jerry_generate_snapshot_opts_t) flags.
-- `buffer_p` - buffer to save snapshot to.
+- `buffer_p` - buffer (aligned to 4 bytes) to save snapshot to.
 - `buffer_size` - the buffer's size.
 - return value
-  - the size of the snapshot as a number value, if it was generated succesfully (i.e. there are no syntax
-    errors in source code, buffer size is sufficient, and snapshot support is enabled in current configuration
-    through JERRY_ENABLE_SNAPSHOT_SAVE)
+  - the size of the generated snapshot in bytes as number value, if it was generated succesfully (i.e. there
+    are no syntax errors in source code, buffer size is sufficient, and snapshot support is enabled in
+    current configuration through JERRY_ENABLE_SNAPSHOT_SAVE)
   - thrown error, otherwise.
 
 **Example**
@@ -5472,6 +5825,9 @@ with the given arguments.
 The function arguments and function body are
 passed as separated arguments.
 
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
+
 **Prototype**
 
 ```c
@@ -5494,12 +5850,12 @@ jerry_generate_function_snapshot (const jerry_char_t *resource_name_p,
 - `args_p` - function arguments, it must be a valid utf8 string.
 - `args_size` - function argument size, in bytes.
 - `generate_snapshot_opts` - any combination of [jerry_generate_snapshot_opts_t](#jerry_generate_snapshot_opts_t) flags.
-- `buffer_p` - buffer to save snapshot to.
+- `buffer_p` - buffer (aligned to 4 bytes) to save snapshot to.
 - `buffer_size` - the buffer's size.
 - return value
-  - the size of the snapshot as a number value, if it was generated succesfully (i.e. there are no syntax
-    errors in source code, buffer size is sufficient, and snapshot support is enabled in current configuration
-    through JERRY_ENABLE_SNAPSHOT_SAVE)
+  - the size of the generated snapshot in bytes as number value, if it was generated succesfully (i.e. there
+    are no syntax errors in source code, buffer size is sufficient, and snapshot support is enabled in
+    current configuration through JERRY_ENABLE_SNAPSHOT_SAVE)
   - thrown error, otherwise.
 
 **Example**
@@ -5564,7 +5920,7 @@ jerry_exec_snapshot (const uint32_t *snapshot_p,
 ```
 
 - `snapshot_p` - pointer to snapshot
-- `snapshot_size` - size of snapshot
+- `snapshot_size` - size of snapshot in bytes
 - `func_index` - index of executed function
 - `exec_snapshot_opts` - any combination of [jerry_exec_snapshot_opts_t](#jerry_exec_snapshot_opts_t) flags.
 - return value
@@ -5641,7 +5997,7 @@ jerry_load_function_snapshot (const uint32_t *snapshot_p,
 ```
 
 - `snapshot_p` - pointer to snapshot
-- `snapshot_size` - size of snapshot
+- `snapshot_size` - size of snapshot in bytes
 - `func_index` - index of function to load
 - `exec_snapshot_opts` - any combination of [jerry_exec_snapshot_opts_t](#jerry_exec_snapshot_opts_t) flags.
 - return value
@@ -5733,7 +6089,7 @@ jerry_get_literals_from_snapshot (const uint32_t *snapshot_p,
 ```
 
 - `snapshot_p` - input snapshot buffer.
-- `snapshot_size` - snapshot size, in bytes.
+- `snapshot_size` - size of snapshot in bytes.
 - `lit_buf_p` - buffer to save literals to.
 - `lit_buf_size` - the buffer's size.
 - `is_c_format` - the output format would be C-style (true) or a simple list (false).
@@ -5886,6 +6242,9 @@ The array length is zero if the backtrace is not available.
 
 This function is typically called from native callbacks.
 
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
+
 **Prototype**
 
 ```c
@@ -5895,7 +6254,7 @@ jerry_get_backtrace (uint32_t max_depth);
 
 - `max_depth` - backtrace collection stops after reaching this value, 0 = unlimited
 - return value
-  - a new array
+  - a newly constructed JS array
 
 **See also**
 
@@ -5903,6 +6262,8 @@ jerry_get_backtrace (uint32_t max_depth);
 
 
 # ArrayBuffer and TypedArray functions
+
+These APIs all depend on the ES2015-subset profile.
 
 ## jerry_get_arraybuffer_byte_length
 
@@ -6128,6 +6489,70 @@ jerry_get_arraybuffer_pointer (const jerry_value_t value);
 - [jerry_create_arraybuffer_external](#jerry_create_arraybuffer_external)
 
 
+## jerry_get_dataview_buffer
+
+**Summary**
+
+Get the ArrayBuffer object used by a DataView object.
+Additionally returns the byteLength and byteOffset properties
+of the DataView object.
+
+For the returned ArrayBuffer the [jerry_release_value](#jerry_release_value)
+must be called when it is no longer needed.
+
+**Prototype**
+
+```c
+jerry_value_t
+jerry_get_dataview_buffer (const jerry_value_t value,
+                           jerry_length_t *byteOffset,
+                           jerry_length_t *byteLength);
+```
+
+- `value` - DataView to get the ArrayBuffer from
+- `byteOffset` - (Optional) returns the start offset of the ArrayBuffer for the DataView
+- `byteLength` - (Optional) returns the number of bytes used from the ArrayBuffer for the DataView
+- return
+  - DataView object's underlying ArrayBuffer object
+  - TypeError if the `value` is not a DataView object
+
+**Example**
+
+[doctest]: # ()
+
+```c
+#include "jerryscript.h"
+
+int
+main (void)
+{
+  jerry_init (JERRY_INIT_EMPTY);
+
+  jerry_value_t arraybuffer = jerry_create_arraybuffer (16);
+  jerry_value_t dataview = jerry_create_dataview (arraybuffer, 0, 16);
+  jerry_length_t byteOffset = 0;
+  jerry_length_t byteLength = 0;
+  jerry_value_t buffer = jerry_get_dataview_buffer (dataview, &byteOffset, &byteLength);
+
+  // buffer is an ArrayBuffer object and ArrayBuffer operations can be performed on it
+  // byteOffset is 0
+  // byteLength is 16
+
+  // usage of buffer
+
+  jerry_release_value (buffer);
+  jerry_release_value (dataview);
+  jerry_release_value (arraybuffer);
+
+  jerry_cleanup ();
+}
+```
+
+**See also**
+
+- [jerry_create_dataview](#jerry_create_dataview)
+
+
 ## jerry_get_typedarray_type
 
 **Summary**
@@ -6220,12 +6645,16 @@ of the TypedArray object.
 For the returned ArrayBuffer the [jerry_release_value](#jerry_release_value)
 must be called.
 
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
+
 **Prototype**
 
 ```c
-jerry_value_t jerry_get_typedarray_buffer (jerry_value_t value,
-                                           jerry_length_t *byteOffset,
-                                           jerry_length_t *byteLength);
+jerry_value_t
+jerry_get_typedarray_buffer (jerry_value_t value,
+                             jerry_length_t *byteOffset,
+                             jerry_length_t *byteLength);
 ```
 
 - `value` - TypedArray to get the ArrayBuffer from
@@ -6264,12 +6693,14 @@ jerry_value_t jerry_get_typedarray_buffer (jerry_value_t value,
 
 **Summary**
 
-Returns the same result as JSON.parse ecmascript function.
+Returns the same result as `JSON.parse` ecmascript function.
 
 **Prototype**
 
 ```c
-jerry_value_t jerry_json_parse (const jerry_char_t *string_p, jerry_size_t string_size)
+jerry_value_t
+jerry_json_parse (const jerry_char_t *string_p,
+                  jerry_size_t string_size);
 ```
 
 - `string_p` - a JSON string
@@ -6293,14 +6724,15 @@ jerry_value_t jerry_json_parse (const jerry_char_t *string_p, jerry_size_t strin
 
 ## jerry_json_stringify
 
-  **Summary**
+**Summary**
 
-  Returns the same value as JSON.stringify() ecmascript function.
+Returns the same value as `JSON.stringify` ecmascript function.
 
-  **Prototype**
+**Prototype**
 
 ```c
-jerry_value_t jerry_json_stringify (const jerry_value_t object_to_stringify)
+jerry_value_t
+jerry_json_stringify (const jerry_value_t object_to_stringify);
 ```
 
 - `object_to_stringify` - a jerry_value_t object to stringify
@@ -6315,7 +6747,7 @@ jerry_value_t jerry_json_stringify (const jerry_value_t object_to_stringify)
   jerry_value_t obj = jerry_create_object ();
   jerry_value_t key = jerry_create_string ((const jerry_char_t *) "name");
   jerry_value_t value = jerry_create_string ((const jerry_char_t *) "John");
-  jerry_set_property (obj, key, value);
+  jerry_release_value (jerry_set_property (obj, key, value));
   jerry_value_t stringified = jerry_json_stringify (obj);
 
   //stringified now contains a json formated string
