Add missing jerry_release_value by calling jerry_set_property and jerry_set_property_by_index (#2821)
JerryScript-DCO-1.0-Signed-off-by: jerry-weng jjweng2007@gmail.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -6737,7 +6737,7 @@ jerry_json_stringify (const jerry_value_t object_to_stringify);
   jerry_value_t obj = jerry_create_object ();
   jerry_value_t key = jerry_create_string ((const jerry_char_t *) "name");
   jerry_value_t value = jerry_create_string ((const jerry_char_t *) "John");
-  jerry_set_property (obj, key, value);
+  jerry_release_value (jerry_set_property (obj, key, value));
   jerry_value_t stringified = jerry_json_stringify (obj);
 
   //stringified now contains a json formated string
